--- a/config/templates/_server.tmpl
+++ b/config/templates/_server.tmpl
@@ -49,7 +49,7 @@ server {
 
     # Prevent server requests on hashed resources
     # We ignore html files with hashes as they might got modified
-    location ~* "\.[a-f0-9]{8,}(\.chunk)?\.(ico|pdf|flv|jpg|jpeg|png|gif|css|swf)$" {
+    location ~* "\.[a-f0-9]{8,}(\.chunk)?\.(css|ico|pdf|flv|jpg|jpeg|png|gif|svg|ttf|otf|eot|woff|woff2|swf)$" {
         root   {{ $app_root }};
         etag   off;
         add_header Cache-Control "public, max-age=31536000, immutable";
@@ -64,7 +64,7 @@ server {
     }
 
     # Return resource or 404 if resource could not be found
-    location ~* "\.(ico|pdf|flv|jpg|jpeg|png|gif|css|swf)$" {
+    location ~* "\.(css|ico|pdf|flv|jpg|jpeg|png|gif|svg|ttf|otf|eot|woff|woff2|swf)$" {
         root   {{ $app_root }};
         add_header Cache-Control "no-cache, max-age=0";
 {{ tmpl.Exec "general-security-headers" . | strings.Indent 8 " " }}
