--- a/config/templates/server.tmpl
+++ b/config/templates/server.tmpl
@@ -47,9 +47,15 @@ server {
         root   /usr/share/nginx/html;
     }
 
+    {{ if not .source_maps.enabled -}}
+    location ~* "{{ .source_maps.regex | test.Required "source_maps.regex is not configured!" }}" {
+        return 404;
+    }
+    {{- end }}
+
     # Prevent server requests on hashed resources
     # We ignore html files with hashes as they might got modified
-    location ~* "\.[a-f0-9]{8,}(\.chunk)?\.(css|ico|pdf|flv|jpg|jpeg|png|gif|svg|ttf|otf|eot|woff|woff2|swf)$" {
+    location ~* "\.[a-f0-9]{8,}(\.chunk)?\.(css|ico|pdf|flv|jpg|jpeg|png|gif|svg|ttf|otf|eot|woff|woff2|swf|map)$" {
         root   {{ $app_root }};
         etag   off;
         add_header Cache-Control "public, max-age=31536000, immutable";
@@ -64,7 +70,7 @@ server {
     }
 
     # Return resource or 404 if resource could not be found
-    location ~* "\.(css|ico|pdf|flv|jpg|jpeg|png|gif|svg|ttf|otf|eot|woff|woff2|swf)$" {
+    location ~* "\.(css|ico|pdf|flv|jpg|jpeg|png|gif|svg|ttf|otf|eot|woff|woff2|swf|map)$" {
         root   {{ $app_root }};
         add_header Cache-Control "no-cache, max-age=0";
 {{ tmpl.Exec "general-security-headers" . | strings.Indent 8 " " }}
