fix: Drop support for TLS 1.0 and TLS 1.1 as support was dropped in the base image.
See https://github.com/nginxinc/docker-nginx/issues/743

--- a/config/templates/owasp.tmpl
+++ b/config/templates/owasp.tmpl
@@ -5,9 +5,9 @@
  {{- else if eq . "B" -}}
    TLSv1.2 TLSv1.3
  {{- else if eq . "C" -}}
-   TLSv1 TLSv1.1 TLSv1.2 TLSv1.3
+   TLSv1.2 TLSv1.3
  {{- else if eq . "D" -}}
-   TLSv1 TLSv1.1 TLSv1.2 TLSv1.3
+   TLSv1.2 TLSv1.3
  {{- else -}}
    {{ test.Fail "Invalid owasp_string provided" }}
  {{- end -}}
