fix: Move base element always to the top of the head section
This avoids issues with Parcel as Parcel places style sheet links always at the top of the head section. See https://github.com/parcel-bundler/parcel/issues/4882

Fixes #11

--- a/config/templates/write_index.tmpl
+++ b/config/templates/write_index.tmpl
@@ -9,8 +9,8 @@
   {{- /* Remove existing base element */ -}}
   {{- $file_content := $file_content | regexp.ReplaceLiteral "<base[^>]*>" "" -}}
 
-  {{- /* Insert new base element before title element */ -}}
-  {{- $file_content = $file_content | regexp.ReplaceLiteral "<title>" (print "<base href=\"" .base_href "\" /><title>") -}}
+  {{- /* Insert new base element at the top of the head section. See https://github.com/codecentric/single-page-application-server/issues/11 */ -}}
+  {{- $file_content = $file_content | regexp.ReplaceLiteral "<head>" (print "<head><base href=\"" .base_href "\" />") -}}
 
   {{- /* Replace occurrences of spa_config.js with spa_config.{hash}.js */ -}}
   {{- $file_content = $file_content | regexp.ReplaceLiteral "(?i)spa(_)?config(\\.[a-f0-9]{4,})?\\.js" (print "spa_config." .spa_config_hash ".js") -}}
