--- a/config/templates/write_spa_config.js.tmpl
+++ b/config/templates/write_spa_config.js.tmpl
@@ -6,7 +6,7 @@ var spaConfig = {{ . | toJSON }}
 {{- $config_dir := env.Getenv "CONFIG_DIR" | test.Required "CONFIG_DIR is not defined" -}}
 {{- $file_content := (tmpl.Exec "spa_config" .spa_config) -}}
 {{- $file_hash := ($file_content | crypto.SHA1) -}}
-{{- $file_path := (filepath.Join $config_dir (print ".out/spa_config." $file_hash ".js")) -}}
+{{- $file_path := (filepath.Join $config_dir ".out" "www" (print "spa_config." $file_hash ".js")) -}}
 {{- tmpl.Exec "spa_config" .spa_config | file.Write $file_path -}}
 {{- $file_hash -}}
 {{- end -}}
